--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
   <groupId>com.ms</groupId>
   <artifactId>spring-cloud-ms</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>customer</module>
+  </modules>
 
   <name>spring-cloud-ms</name>
   <!-- FIXME change it to the project's website -->
@@ -46,7 +50,7 @@
   </dependencies>
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (maybe moved to parent pom) -->
       <plugins>
         <plugin>
           <groupId>org.springframework.boot</groupId>
