--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
         format_sql: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
 
 #  mail:
