--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -22,15 +22,15 @@ spring:
     default-schema: public
     schemas: public
     out-of-order: true
-    enabled: false
+    enabled: true
   jpa:
+    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
         format_sql: true
     hibernate:
-      ddl-auto: update
-    show-sql: true
+      ddl-auto: none
 
 #  mail:
 #    host: smtp.gmail.com
