downgrade flyway version to be compatible with spring boot

--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,16 @@
             <version>9.8.2</version>
         </dependency>
 
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>8.3.0</version>
         </dependency>
     </dependencies>
 
