--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -12,18 +12,14 @@
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
-
+        <spring.boot.starter.version>2.7.5</spring.boot.starter.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${spring.boot.starter.version}</version>
         </dependency>
-
     </dependencies>
 </project>
