--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -29,6 +29,8 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
         format_sql: true
+        jdbc:
+          time_zone: UTC
     hibernate:
       ddl-auto: none
 
