--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -12,7 +12,8 @@
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
-        <spring.boot.starter.version>2.7.5</spring.boot.starter.version>
+        <spring.boot.starter.version>3.0.1</spring.boot.starter.version>
+        <testcontainers.version>1.17.6</testcontainers.version>
     </properties>
 
     <dependencies>
@@ -21,5 +22,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>${spring.boot.starter.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
