--- a/customer/src/main/resources/application-test.yml
+++ b/customer/src/main/resources/application-test.yml
@@ -1,6 +1,3 @@
 spring:
   datasource:
-    url: jdbc:tc:postgresql:12.9-alpine:///reservation_test_container
-  test:
-    database:
-      replace: none
+    url: jdbc:tc:postgresql:12.13-alpine:///test_database
