update postgresql testcontainer version in test profile

--- a/customer/src/main/resources/application-test.yml
+++ b/customer/src/main/resources/application-test.yml
@@ -1,3 +1,5 @@
 spring:
   datasource:
-    url: jdbc:tc:postgresql:12.13-alpine:///test_database
+    url: jdbc:tc:postgresql:14.2-alpine:///test_database
+    username: postgres
+    password: postgres
